Changed loading page

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@
   height: 2.5rem;
   width: 2.5rem;
   border: 5px solid whitesmoke;
-  border-top-color: #3b4ef8;
+  border-top-color: #e03a3c;
   font-family: "Roboto Slab", serif;
   border-radius: 50%;
   animation: loading 1s ease infinite;
